--- a/Week1/Day-5/Task-2/Task-2.html
+++ b/Week1/Day-5/Task-2/Task-2.html
@@ -6,6 +6,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="scripts.js"></script>
+    <script src="CORSFile.js"></script>
   </body>
 </html>
