--- a/Week1/Day-5/Task-3/Task-3.html
+++ b/Week1/Day-5/Task-3/Task-3.html
@@ -6,6 +6,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="scripts.js"></script>
+    <script src="WeatherNewsAPI.js"></script>
   </body>
 </html>
